<resources>
    <string name="app_name">BakingBills</string>
    <string name="baking_bill">Baking Bill$</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="productos">Productos</string>
    <string name="usuarios">Usuarios</string>
    <string name="inventory_amp_budget_system"><![CDATA[Inventory & Budget System]]></string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="Precio">Precio</string>
    <string name="peso_gr">Peso (Gr)</string>
    <string name="Cantidad">Cantidad</string>
    <string name="volver">Volver</string>
    <string name="agregar">Agregar</string>
    <string name="llenar_los_datos_necesarios_sobre_el_ingrediente_a_agregar">Llenar los datos necesarios sobre el ingrediente a agregar</string>
    <string name="agregar_nuevo_usuario">Agregar Nuevo Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="agregar_ingredientes">Agregar Ingredientes</string>
    <string name="motivo_ingredientes_producto">Motivo (Ingredientes/ Producto)</string>
    <string name="punit">Precio Unitario</string>
    <string name="precio_total">Precio Total</string>
    <string name="lista_de_ingredientes">Lista de Ingredientes</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="lista_de_presupuestos">Lista de Presupuestos</string>
    <string name="editar">Editar</string>
    <string name="id">ID</string>
    <string name="editar_ingredientes">Editar Ingredientes</string>
    <string name="editar_producto">Editar producto</string>
    <string name="eliminar_ingredientes">Eliminar ingrediente</string>
    <string name="eliminar_usuarios">Eliminar usuarios</string>
    <string name="delete">Elminar</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="unidades">Unidades</string>
    <string name="medida">Medida</string>
    <string name="editar_presupuesto">Editar Presupuesto</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="agregar_presupuesto">Agregar Presupuesto</string>
    <string name="equals">=</string>
    <string name="by_ram_inc">By RAM INC.</string>
</resources>