<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.editar.editIngredientesFragment"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:backgroundTint="#FFF3DC"
    android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/editar_ingredientes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/tag"
            android:drawablePadding="12dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="#68604A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/etMedida"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/quiantity"
            android:drawablePadding="12dp"
            android:hint="@string/Cantidad"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="#68604A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/money"
            android:drawablePadding="12dp"
            android:hint="@string/Precio"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="#68604A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMedida" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#4C4533"
            android:text="@string/volver"
            android:textColor="#CDC7B4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#4C4533"
            android:text="@string/editar"
            android:textColor="#CDC7B4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toEndOf="@+id/btnVolver" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteIngrediente"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="190dp"
            android:backgroundTint="#AC9A75"
            android:src="@drawable/delete"
            android:tint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnEditar"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toEndOf="@+id/btnVolver"
            app:layout_constraintTop_toBottomOf="@+id/etPrecio"
            app:shapeAppearanceOverlay="@style/FabStyle2"
            tools:ignore="ContentDescription,MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>